[package]
name = "libswaykbswitch"
authors = ["Andrey Khorokhorin <a-horohorin@mail.ru>"]
version = "0.2.2"
description = "A shared library for Vim keyboard layout switching via sway IPC"
license = "MIT"
repository = "https://github.com/khaser/sway-vim-kbswitch"
keywords = ["sway", "swaywm", "vim"]
readme = "README.md"

[dependencies]
swayipc = "3.0.3"

[lib]
name = "swaykbswitch"
crate-type = ["cdylib"]
